cmake_minimum_required(VERSION 3.23)
project(chip8)

SET(CMAKE_BUILD_TYPE Debug)

set(CMAKE_CXX_STANDARD 14)

find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/rom/ibm.ch8 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/rom/c8_test.ch8 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/rom/pong.ch8 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/rom/fishie.ch8 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/rom/invaders.ch8 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/rom/test_opcode.ch8 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(chip8 main.cpp chip8.cpp Display.cpp)
target_link_libraries(chip8 ${SDL2_LIBRARIES})
